<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="io.launchpadstudios.portfolio.MainActivity"
    android:clickable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:id="@+id/subtitle"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/app_button_01"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/subtitle"
        android:text="@string/popular_movies_app_name"
        android:layout_centerHorizontal="true"
        android:width="250dp"
        android:onClick="onClickAppButton"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk_app_name"
        android:id="@+id/app_button_02"
        android:layout_below="@+id/app_button_01"
        android:layout_alignStart="@+id/app_button_01"
        android:layout_alignEnd="@+id/app_button_01"
        android:onClick="onClickAppButton"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_app_name"
        android:id="@+id/app_button_04"
        android:width="200dp"
        android:onClick="onClickAppButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_below="@+id/app_button_02"
        android:layout_alignStart="@+id/app_button_02"
        android:layout_alignEnd="@+id/app_button_02" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material_app_name"
        android:id="@+id/app_button_05"
        android:width="200dp"
        android:layout_below="@+id/app_button_04"
        android:layout_alignStart="@+id/app_button_04"
        android:layout_alignEnd="@+id/app_button_04"
        android:onClick="onClickAppButton"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous_app_name"
        android:id="@+id/app_button_06"
        android:width="200dp"
        android:layout_below="@+id/app_button_05"
        android:layout_alignStart="@+id/app_button_05"
        android:layout_alignEnd="@+id/app_button_05"
        android:onClick="onClickAppButton"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone_app_name"
        android:id="@+id/app_button_07"
        android:width="200dp"
        android:layout_below="@+id/app_button_06"
        android:layout_alignStart="@+id/app_button_06"
        android:layout_alignEnd="@+id/app_button_06"
        android:onClick="onClickAppButton"
        style="@style/Widget.AppCompat.Button.Colored" />
</RelativeLayout>
